--- a/.github/workflows/push-not-master.yaml
+++ b/.github/workflows/push-not-master.yaml
@@ -14,6 +14,12 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: '0'
+      - name: Setup Python
+        id: python-setup
+        uses: actions/setup-python@v1
+      - name: Lint Python
+        id: python-lint
+        uses: whynothugo/python-linting@master
       - name: Prepare Environment
         id: prepare
         env:
