--- a/.github/workflows/pr-master.yaml
+++ b/.github/workflows/pr-master.yaml
@@ -11,6 +11,9 @@ jobs:
       - name: Checkout Repository
         id: checkout
         uses: actions/checkout@v2
+      - name: Check for CRLF endings
+        id: crlf-lint
+        uses: erclu/check-crlf@v1
       - name: Setup Python
         id: python-setup
         uses: actions/setup-python@v1
