--- a/.github/workflows/push-not-master.yaml
+++ b/.github/workflows/push-not-master.yaml
@@ -14,6 +14,9 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: '0'
+      - name: Check for CRLF endings
+        id: crlf-lint
+        uses: erclu/check-crlf@v1
       - name: Setup Python
         id: python-setup
         uses: actions/setup-python@v1
