--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,14 @@
-version: 2
+---
 updates:
-- package-ecosystem: pip
-  directory: "/"
+- directory: /
+  open-pull-requests-limit: 10
+  package-ecosystem: pip
   schedule:
     interval: daily
+- directory: /
   open-pull-requests-limit: 10
+  package-ecosystem: docker
+  schedule:
+    interval: daily
+version: 2
+
